--- a/GeoDash/Base.lproj/LaunchScreen.storyboard
+++ b/GeoDash/Base.lproj/LaunchScreen.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,30 +21,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Trumpy Dash" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEL-M6-Nr7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Trumpy Dash" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEL-M6-Nr7">
                                 <rect key="frame" x="172" y="56" width="586" height="58.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="49"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Da G.O.A.T Industries" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O86-jl-MED">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Da G.O.A.T Industries" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O86-jl-MED">
                                 <rect key="frame" x="182" y="311" width="549" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="27"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.83324079949999996" green="0.45106006949999999" blue="0.2083564946" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="O86-jl-MED" secondAttribute="trailing" constant="42" id="5V4-fP-KPh"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="UEL-M6-Nr7" secondAttribute="trailing" constant="21" id="9AS-tu-y0Z"/>
-                            <constraint firstItem="UEL-M6-Nr7" firstAttribute="top" secondItem="J98-q4-I6J" secondAttribute="bottom" constant="117" id="FvL-bR-JDC"/>
-                            <constraint firstItem="O86-jl-MED" firstAttribute="leading" secondItem="A5U-oF-EOB" secondAttribute="leadingMargin" constant="36" id="Hnf-xR-S8v"/>
-                            <constraint firstItem="UEL-M6-Nr7" firstAttribute="leading" secondItem="A5U-oF-EOB" secondAttribute="leadingMargin" constant="20" id="LGm-8L-CPs"/>
-                            <constraint firstItem="dHf-tW-N8B" firstAttribute="top" secondItem="UEL-M6-Nr7" secondAttribute="bottom" constant="392" id="a7j-YQ-0rR"/>
-                            <constraint firstItem="dHf-tW-N8B" firstAttribute="top" secondItem="O86-jl-MED" secondAttribute="bottom" constant="20" id="my1-Gj-PP5"/>
-                            <constraint firstItem="O86-jl-MED" firstAttribute="top" secondItem="UEL-M6-Nr7" secondAttribute="bottom" constant="317" id="rsa-wW-oaL"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5nI-o5-aVV" userLabel="First Responder" sceneMemberID="firstResponder"/>
