--- a/GeoDash/Base.lproj/Main.storyboard
+++ b/GeoDash/Base.lproj/Main.storyboard
@@ -81,6 +81,24 @@
             </objects>
             <point key="canvasLocation" x="770.46476761619192" y="285.60000000000002"/>
         </scene>
+        <!--Level Two View Controller-->
+        <scene sceneID="oH2-CO-h3E">
+            <objects>
+                <viewController id="Uwa-tY-9YN" customClass="LevelTwoViewController" customModule="GeoDash" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jcj-US-KTQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="n0d-z4-5Cg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fHV-68-UMr">
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i5c-U7-HND" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1411" y="-102"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="JZz-L5-pTd">
             <objects>
@@ -140,7 +158,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0ZH-P4-BGz" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UKC-HO-2PG">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="UKC-HO-2PG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
